Fix flash messages going behind sidebar

--- a/src/SymEdit/Bundle/CoreBundle/Resources/less/admin/admin.less
+++ b/src/SymEdit/Bundle/CoreBundle/Resources/less/admin/admin.less
@@ -90,7 +90,7 @@ img {
     font-size: 13px;
 
     .flash-message {
-        padding: 4px 0 4px 150px;
+        padding: 4px 0 4px 200px;
 
         &.message {
             background-color: @green;
